--- a/backend/views/pages/index.pug
+++ b/backend/views/pages/index.pug
@@ -154,12 +154,119 @@ html
         </div>
         `)
 
+      section
         h2.h2 Breakpoints
         p Breakpoint info goes here
         ul
           li mobile = less than or equal to 767px
           li desktop = greater than or equal to 768px
-      <hr>
+
+      section
+        h2.h2 Forms &amp; Inputs
+
+        +codeblock('html', 'Input fields', `
+        <div class="form-group">
+          <label class="form-label" for="first-name-2">First name</label>
+          <input class="form-control" id="first-name-2" name="first-name-2" type="text">
+        </div>
+        <div class="form-group">
+          <label class="form-label" for="last-name-2">Last name</label>
+          <input class="form-control" id="last-name-2" name="last-name-2" type="text">
+        </div>
+        `)
+
+        +codeblock('html', 'Radio buttons', `
+        <form>
+          <div class="form-group">
+            <fieldset class="inline">
+              <legend class="visuallyhidden">Do you already have a personal user account?</legend>
+              <label class="block-label" for="radio-inline-1">
+                <input id="radio-inline-1" name="radio-inline-group" value="Yes" type="radio">
+                Yes
+              </label>
+              <label class="block-label" for="radio-inline-2">
+                <input id="radio-inline-2" name="radio-inline-group" value="No" type="radio">
+                No
+              </label>
+            </fieldset>
+          </div>
+        </form>
+        `)
+
+        +codeblock('html', 'Check boxes', `
+        <form>
+          <fieldset>
+            <legend class="visuallyhidden">Which types of waste do you transport regularly?</legend>
+            <label class="block-label" for="waste-type-1">
+              <input id="waste-type-1" name="waste-types" value="waste-animal" type="checkbox">
+              Waste from animal carcasses
+            </label>
+            <label class="block-label" for="waste-type-2">
+              <input id="waste-type-2" name="waste-types" value="waste-mines" type="checkbox">
+              Waste from mines or quarries
+            </label>
+            <label class="block-label" for="waste-type-3">
+              <input id="waste-type-3" name="waste-types" value="waste-farm-agricultural" type="checkbox">
+              Farm or agricultural waste
+            </label>
+          </fieldset>
+        </form>
+        `)
+
+        +codeblock('html', 'Label', `
+        <div class="form-group">
+          <label class="form-label" for="select-box">This is the label text</label>
+          <select class="form-control" id="select-box">
+            <option>GOV.UK elements option 1</option>
+            <option>GOV.UK elements option 2</option>
+            <option>GOV.UK elements option 3</option>
+          </select>
+        </div>
+        `)
+
+      section
+        h2.h2 Patterns / page sections
+        +codeblock('html', 'Steps', `
+        <div class="outer-container">
+          <h3 class="h2 font-reg flush--top push--bottom soft--top">How does it work?</h3>
+          <ul>
+            <li class="col-4 text--center soft--bottom">
+              <img src="http://placehold.it/250x250" alt="">
+              <div class="cf push--top text--left">
+                <span class="steps-number font-med font-grey float--left push-half--right">1</span>
+                <div class="steps-content float--left">
+                  <h4 class="h3 font-reg">Find marketplaces</h4>
+                  <p class="font-xsmall">Find online marketplaces suitable for your products</p>
+                </div>
+              </div>
+            </li>
+
+            <li class="col-4 text--center soft--bottom">
+              <img src="http://placehold.it/250x250" alt="">
+              <div class="cf push--top text--left">
+                <span class="steps-number font-med font-grey float--left push-half--right">2</span>
+                <div class="steps-content float--left">
+                  <h4 class="h3 font-reg">Apply to join</h4>
+                  <p class="font-xsmall">Apply via Department for International Trade and get fast track.</p>
+                </div>
+              </div>
+            </li>
+
+            <li class="col-4 text--center soft--bottom">
+              <img src="http://placehold.it/250x250" alt="">
+              <div class="cf push--top text--left">
+                <span class="steps-number font-med font-grey float--left push-half--right">3</span>
+                <div class="steps-content float--left">
+                  <h4 class="h3 font-reg">Start selling</h4>
+                  <p class="font-xsmall">Reach billions of consumers and grow your business</p>
+                </div>
+              </div>
+            </li>
+          </ul>
+        </div>
+        `)
+        
+      // end of outer container
 
     include ../layout/footer
     script(src="/vendor/js/jquery.js")
