fix footer text

--- a/backend/views/layout/footer.pug
+++ b/backend/views/layout/footer.pug
@@ -49,8 +49,8 @@ footer(role=contentinfo)
                 img(src="images/hm_government_logo_horizontal.svg" alt="HM Government logo")/
             li.float--left.soft-half--left.footer-links--border
               a.link.link--white(href="https://www.great.gov.uk/" title="part of great.gov.uk")
-                span.hide-mobile.font-light-grey.font-light Part of
+                span.hide-mobile.font-light-grey.font-light Part of 
                 span.font-regular great.gov.uk
         .footer-copy.font-light-grey.font-xsmall
           p
-            | &copy Crown copyright 2017. All rights reserved.
+            | &copy; Crown copyright 2017. All rights reserved.
