amend paragraph text

--- a/backend/views/pages/index.pug
+++ b/backend/views/pages/index.pug
@@ -25,11 +25,11 @@ block content
   <p>This is normal text (16px).</p>
   `)
 
-  +codeblock('html', 'Large paragraph', `
+  +codeblock('html', 'Paragraph large', `
   <p class="font-large">This is large text (18px).</p>
   `)
 
-  +codeblock('html', 'Small paragraph', `
+  +codeblock('html', 'Paragraph small', `
   <p class="font-small">This is small text (15px).</p>
   `)
 
