amend paragraph label text

--- a/backend/views/pages/index.pug
+++ b/backend/views/pages/index.pug
@@ -25,15 +25,15 @@ block content
   <p>This is normal text (16px).</p>
   `)
 
-  +codeblock('html', 'Paragraph large', `
+  +codeblock('html', 'Paragraph (large)', `
   <p class="font-large">This is large text (18px).</p>
   `)
 
-  +codeblock('html', 'Paragraph small', `
+  +codeblock('html', 'Paragraph (small)', `
   <p class="font-small">This is small text (15px).</p>
   `)
 
-  +codeblock('html', 'Extra small paragraph', `
+  +codeblock('html', 'Paragraph (extra small)', `
   <p class="font-xsmall">This is extra small text (14px).</p>
   `)
 
