--- a/frontend/styles/utilities/_helpers.scss
+++ b/frontend/styles/utilities/_helpers.scss
@@ -108,12 +108,16 @@
 
 
 // Micro clearfix, as per: css-101.org/articles/clearfix/latest-new-clearfix-so-far.php
-.cf {
-  &:after {
+%cf {
+  &::after {
     clear: both;
     content: '';
     display: table;
   }
+}
+
+.cf {
+  @extend %cf;
 }
 
 .image {
