--- a/frontend/styles/utilities/_reset.scss
+++ b/frontend/styles/utilities/_reset.scss
@@ -28,14 +28,14 @@
   }
 
   blockquote {
-    &:before, &:after {
+    &::before, &::after {
       content: '';
       content: none;
     }
   }
 
   q {
-    &:before, &:after {
+    &:before, &::after {
       content: '';
       content: none;
     }
