correct header contact us link text

--- a/backend/views/layout/header.pug
+++ b/backend/views/layout/header.pug
@@ -122,6 +122,6 @@ header(role='banner')
               li.navigation-toggle-item
                 a(href="https://www.export.great.gov.uk/about/" title="About great.gov.uk") About great.gov.uk
               li.navigation-toggle-item
-                a.last(href="https://contact-us.export.great.gov.uk/selling_online_overseas" title="Contact us") Events
+                a.last(href="https://contact-us.export.great.gov.uk/selling_online_overseas" title="Contact us") Contact us
     // site nav end
 // header end
