add nbsp to header

--- a/backend/views/layout/header.pug
+++ b/backend/views/layout/header.pug
@@ -13,7 +13,7 @@ header(role='banner')
               img(src="images/hm_government_logo_horizontal.svg" alt="HM Government logo")/
           li.float--left.soft-half--left
             a.class.link.link--white(href="https://www.great.gov.uk/" title="part of great.gov.uk")
-              span.hide-mobile.font-light-grey.font-light Part of
+              span.hide-mobile.font-light-grey.font-light Part of&nbsp;
               span.font-regular great.gov.uk
         ul.list-inline.list-separators.float--right.navigation-login.font-regular
           li.float--left.soft-half--right
