fix #22 add hash links to page for navigation

--- a/backend/views/pages/index.pug
+++ b/backend/views/pages/index.pug
@@ -1,6 +1,31 @@
 extends ../layout/base.pug
 include ../../../frontend/components/TabSwitcher/templates/mixins.pug
 block content
+  section
+    h1.h1 Overview
+    p This library is a set of shared UI components and patterns used on the great.gov.uk sites.
+    nav
+      ul
+        li
+          a.link(href='#section-typography') Typography
+        li
+          a.link(href='#section-links') Links
+        li
+          a.link(href='#section-lists') Lists
+        li
+          a.link(href='#section-buttons') Buttons
+        li
+          a.link(href='#section-colours') Colours
+        li
+          a.link(href='#section-layout') Layout
+        li
+          a.link(href='#section-breakpoints') Breakpoints
+        li
+          a.link(href='#section-forms') Forms &amp; Inputs
+        li
+          a.link(href='#section-media') Media
+        li
+          a.link(href='#section-patterns') Patterns
   section(id="section-typography")
   h2.h2 Typography
   p Here are examples of typography used across the site
